syntax = "proto3";

package com.google.tuningfork;

enum LoadingState {
  NOT_LOADING = 1;
  LOADING = 2;
}
// This is the base annotation for a game engine like Unity.
// The user should extend with their own annotations.
message Annotation {
  LoadingState loading_state = 1;
  int32 level = 2;
}

enum QualitySettings {
  FASTEST = 1;
  FAST = 2;
  SIMPLE = 3;
  GOOD = 4;
  BEAUTIFUL = 5;
  FANTASTIC = 6;
}

message FidelityParams {
  QualitySettings qualitySettings = 1;
}
